// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Before deleting users, check if expired tokens are removed 1`] = `
Array [
  Object {
    "created": "2022-01-01T11:00:00.000Z",
    "expiredAt": "2022-01-15T11:00:00.000Z",
    "id": "TOKEN:2035xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
    "principalType": "Hub",
    "ttl": 1209600,
    "userId": "dbId:HubRepository:1",
  },
  Object {
    "created": "2022-01-01T11:00:00.000Z",
    "expiredAt": "2022-01-15T11:00:00.000Z",
    "id": "TOKEN:2036xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
    "principalType": "user",
    "ttl": 1209600,
    "userId": "dbId:UserRepository:1",
  },
  Object {
    "created": "2022-01-01T11:00:00.000Z",
    "expiredAt": "2022-01-15T11:00:00.000Z",
    "id": "TOKEN:2037xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
    "principalType": "user",
    "ttl": 1209600,
    "userId": "dbId:UserRepository:2",
  },
]
`;

exports[`Before deleting users, check if expired tokens are removed 2`] = `
Array [
  Object {
    "created": "2022-01-16T11:00:00.000Z",
    "expiredAt": "2022-01-30T11:00:00.000Z",
    "id": "TOKEN:2038xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
    "principalType": "user",
    "ttl": 1209600,
    "userId": "dbId:UserRepository:1",
  },
]
`;

exports[`Before deleting users, check if oauth tokens from missing users are removed 1`] = `
Array [
  Object {
    "appId": "appId",
    "id": "1",
    "issuedAt": "2022-01-01T11:00:00.000Z",
    "refreshToken": "abcde",
    "userId": "nonExisting",
  },
]
`;

exports[`Before deleting users, check if orphaned fingerprints are removed. 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "data": null,
    "id": "dbId:FingerprintRepository:10",
    "isTransformed": false,
    "locationId": "dbId:LocationRepository:1",
    "ownerId": "dbId:UserRepository:2",
    "sphereId": "dbId:SphereRepository:1",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "data": null,
    "id": "dbId:FingerprintRepository:3",
    "isTransformed": false,
    "locationId": "dbId:LocationRepository:3",
    "ownerId": "dbId:UserRepository:2",
    "sphereId": "dbId:SphereRepository:1",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "data": null,
    "id": "dbId:FingerprintRepository:8",
    "isTransformed": false,
    "locationId": "dbId:LocationRepository:2",
    "ownerId": "dbId:UserRepository:1",
    "sphereId": "dbId:SphereRepository:1",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
]
`;

exports[`Before deleting users, check if unused files are removed. 1`] = `
Array [
  Object {
    "chunkSize": 251200,
    "contentType": "binary/octet-stream",
    "filename": "image.jpg",
    "id": "dbId:FsFilesRepository:4",
    "length": 100,
    "uploadDate": "2022-01-01T11:00:00.000Z",
  },
]
`;

exports[`Before deleting users, check if unused files are removed. 2`] = `
Array [
  Object {
    "data": Object {
      "data": Array [
        97,
        98,
        99,
        100,
        101,
      ],
      "type": "Buffer",
    },
    "files_id": "dbId:FsFilesRepository:4",
    "id": "dbId:FsChunksRepository:5",
    "n": 0,
  },
]
`;

exports[`Before deleting users, check sanitation deletion counts 1`] = `
Object {
  "devices": Object {
    "appInstallations": 0,
    "deviceLocationsMap": 0,
    "deviceSphereMap": 0,
    "devices": 0,
    "fingerprintLinks": 0,
    "preferences": 0,
  },
  "files": Object {
    "chunks": 1,
    "files": 1,
  },
  "fingerprints": 3,
  "spheres": Object {
    "access": Object {
      "hubs": 0,
      "spheres": 0,
      "users": 0,
    },
    "hubs": 0,
    "locations": 0,
    "messages": Object {
      "messageStates": 0,
      "messageUsers": 0,
      "messages": 0,
      "messagesDeleteByUsers": 0,
      "messagesReadByUsers": 0,
      "messagesRecipientUsers": 0,
      "messagesV2": 0,
    },
    "scenes": 0,
    "sphereKeys": 0,
    "spheres": 0,
    "stones": Object {
      "abilities": 0,
      "abilityProperties": 0,
      "behaviours": 0,
      "energyData": 0,
      "energyDataProcessed": 0,
      "keys": 0,
      "stones": 0,
      "switchStates": 0,
    },
    "toons": 0,
    "trackingNumbers": 0,
  },
  "tokens": Object {
    "crownstoneTokens": 0,
    "oauthTokens": 0,
  },
}
`;

exports[`Check if deleted spheres are removed from user's sphere access 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": "dbId:SphereAccessRepository:1",
    "invitePending": false,
    "role": "admin",
    "sphereAuthorizationToken": "TOKEN:2011xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
    "sphereId": "dbId:SphereRepository:1",
    "updatedAt": "1970-01-01T00:00:00.000Z",
    "userId": "dbId:UserRepository:1",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": "dbId:SphereAccessRepository:2",
    "invitePending": false,
    "role": "member",
    "sphereAuthorizationToken": "TOKEN:2012xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
    "sphereId": "dbId:SphereRepository:1",
    "updatedAt": "1970-01-01T00:00:00.000Z",
    "userId": "dbId:UserRepository:2",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": "dbId:SphereAccessRepository:3",
    "invitePending": false,
    "role": "hub",
    "sphereAuthorizationToken": "TOKEN:2013xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
    "sphereId": "dbId:SphereRepository:1",
    "updatedAt": "1970-01-01T00:00:00.000Z",
    "userId": "dbId:HubRepository:1",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": "dbId:SphereAccessRepository:4",
    "invitePending": false,
    "role": "admin",
    "sphereId": "RemovedSphereId",
    "updatedAt": "1970-01-01T00:00:00.000Z",
    "userId": "dbId:UserRepository:1",
  },
]
`;

exports[`Check if deleted spheres are removed from user's sphere access 2`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": "dbId:SphereAccessRepository:4",
    "invitePending": false,
    "role": "admin",
    "sphereId": "RemovedSphereId",
    "updatedAt": "1970-01-01T00:00:00.000Z",
    "userId": "dbId:UserRepository:1",
  },
]
`;

exports[`Check if deleted spheres are removed from user's sphere access 3`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": "dbId:SphereAccessRepository:1",
    "invitePending": false,
    "role": "admin",
    "sphereAuthorizationToken": "TOKEN:2011xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
    "sphereId": "dbId:SphereRepository:1",
    "updatedAt": "1970-01-01T00:00:00.000Z",
    "userId": "dbId:UserRepository:1",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": "dbId:SphereAccessRepository:2",
    "invitePending": false,
    "role": "member",
    "sphereAuthorizationToken": "TOKEN:2012xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
    "sphereId": "dbId:SphereRepository:1",
    "updatedAt": "1970-01-01T00:00:00.000Z",
    "userId": "dbId:UserRepository:2",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": "dbId:SphereAccessRepository:3",
    "invitePending": false,
    "role": "hub",
    "sphereAuthorizationToken": "TOKEN:2013xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
    "sphereId": "dbId:SphereRepository:1",
    "updatedAt": "1970-01-01T00:00:00.000Z",
    "userId": "dbId:HubRepository:1",
  },
]
`;

exports[`Delete member and admin in sphere and run sanitation. Database should be cleared. 1`] = `
Object {
  "app": Array [],
  "appInstallation": Array [],
  "bootloader": Array [],
  "crownstoneToken": Array [],
  "device": Array [],
  "deviceLocationMap": Array [],
  "devicePreferences": Array [],
  "deviceSphereMap": Array [],
  "fingerprint": Array [],
  "fingerprintLinker": Array [],
  "fingerprintV2": Array [],
  "firmware": Array [],
  "fsChunks": Array [],
  "fsFiles": Array [],
  "hub": Array [],
  "location": Array [],
  "message": Array [],
  "messageDeletedByUser": Array [],
  "messageReadByUser": Array [],
  "messageRecipientUser": Array [],
  "messageState": Array [],
  "messageUser": Array [],
  "messageV2": Array [],
  "oauthToken": Array [],
  "scene": Array [],
  "sphere": Array [],
  "sphereAccess": Array [],
  "sphereFeature": Array [],
  "sphereKeys": Array [],
  "sphereTrackingNumber": Array [],
  "stone": Array [],
  "stoneAbility": Array [],
  "stoneAbilityProperty": Array [],
  "stoneBehaviour": Array [],
  "stoneEnergy": Array [],
  "stoneEnergyProcessed": Array [],
  "stoneKeys": Array [],
  "stoneSwitchState": Array [],
  "toon": Array [],
  "user": Array [],
}
`;

exports[`Delete member and admin in sphere and run sanitation. Database should be cleared. 2`] = `
Object {
  "appInstallation": Array [
    Object {
      "appName": "testApp",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "developmentApp": false,
      "deviceId": "dbId:DeviceRepository:1",
      "deviceType": "phone",
      "id": "dbId:AppInstallationRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "appName": "testApp",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "developmentApp": false,
      "deviceId": "dbId:DeviceRepository:2",
      "deviceType": "phone",
      "id": "dbId:AppInstallationRepository:2",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "crownstoneToken": Array [
    Object {
      "created": "2022-01-01T11:00:00.000Z",
      "expiredAt": "2022-01-15T11:00:00.000Z",
      "id": "TOKEN:2035xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
      "principalType": "Hub",
      "ttl": 1209600,
      "userId": "dbId:HubRepository:1",
    },
    Object {
      "created": "2022-01-01T11:00:00.000Z",
      "expiredAt": "2022-01-15T11:00:00.000Z",
      "id": "TOKEN:2036xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
      "principalType": "user",
      "ttl": 1209600,
      "userId": "dbId:UserRepository:1",
    },
  ],
  "device": Array [
    Object {
      "address": "abc",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:DeviceRepository:1",
      "name": "sphere1_device",
      "ownerId": "dbId:UserRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "address": "abc",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:DeviceRepository:2",
      "name": "sphere1_device_backup",
      "ownerId": "dbId:UserRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "devicePreferences": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:1",
      "id": "dbId:DevicePreferencesRepository:1",
      "property": "prop",
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "value": true,
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:1",
      "id": "dbId:DevicePreferencesRepository:2",
      "property": "prop2",
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "value": false,
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:2",
      "id": "dbId:DevicePreferencesRepository:3",
      "property": "prop",
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "value": true,
    },
  ],
  "fingerprint": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "data": null,
      "id": "dbId:FingerprintRepository:1",
      "isTransformed": false,
      "locationId": "dbId:LocationRepository:1",
      "ownerId": "dbId:UserRepository:1",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "data": null,
      "id": "dbId:FingerprintRepository:2",
      "isTransformed": false,
      "locationId": "dbId:LocationRepository:2",
      "ownerId": "dbId:UserRepository:1",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "data": null,
      "id": "dbId:FingerprintRepository:4",
      "isTransformed": false,
      "locationId": "dbId:LocationRepository:1",
      "ownerId": "dbId:UserRepository:1",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "data": null,
      "id": "dbId:FingerprintRepository:5",
      "isTransformed": false,
      "locationId": "dbId:LocationRepository:2",
      "ownerId": "dbId:UserRepository:2",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "data": null,
      "id": "dbId:FingerprintRepository:6",
      "isTransformed": false,
      "locationId": "dbId:LocationRepository:3",
      "ownerId": "dbId:UserRepository:1",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "fingerprintLinker": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:1",
      "fingerprintId": "dbId:FingerprintRepository:1",
      "id": "dbId:FingerprintLinkerRepository:1",
      "locationId": "dbId:LocationRepository:1",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:1",
      "fingerprintId": "dbId:FingerprintRepository:2",
      "id": "dbId:FingerprintLinkerRepository:2",
      "locationId": "dbId:LocationRepository:2",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:1",
      "fingerprintId": "dbId:FingerprintRepository:6",
      "id": "dbId:FingerprintLinkerRepository:3",
      "locationId": "dbId:LocationRepository:3",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:2",
      "fingerprintId": "dbId:FingerprintRepository:4",
      "id": "dbId:FingerprintLinkerRepository:4",
      "locationId": "dbId:LocationRepository:1",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:2",
      "fingerprintId": "dbId:FingerprintRepository:5",
      "id": "dbId:FingerprintLinkerRepository:5",
      "locationId": "dbId:LocationRepository:2",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:2",
      "fingerprintId": "dbId:FingerprintRepository:6",
      "id": "dbId:FingerprintLinkerRepository:6",
      "locationId": "dbId:LocationRepository:3",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "fsChunks": Array [
    Object {
      "data": Object {
        "data": Array [
          97,
          98,
          99,
          100,
          101,
        ],
        "type": "Buffer",
      },
      "files_id": "dbId:FsFilesRepository:1",
      "id": "dbId:FsChunksRepository:1",
      "n": 0,
    },
    Object {
      "data": Object {
        "data": Array [
          102,
          103,
          104,
          105,
          106,
        ],
        "type": "Buffer",
      },
      "files_id": "dbId:FsFilesRepository:1",
      "id": "dbId:FsChunksRepository:2",
      "n": 1,
    },
    Object {
      "data": Object {
        "data": Array [
          97,
          98,
          99,
          100,
          101,
        ],
        "type": "Buffer",
      },
      "files_id": "dbId:FsFilesRepository:2",
      "id": "dbId:FsChunksRepository:3",
      "n": 0,
    },
    Object {
      "data": Object {
        "data": Array [
          97,
          98,
          99,
          100,
          101,
        ],
        "type": "Buffer",
      },
      "files_id": "dbId:FsFilesRepository:3",
      "id": "dbId:FsChunksRepository:4",
      "n": 0,
    },
    Object {
      "data": Object {
        "data": Array [
          97,
          98,
          99,
          100,
          101,
        ],
        "type": "Buffer",
      },
      "files_id": "dbId:FsFilesRepository:5",
      "id": "dbId:FsChunksRepository:6",
      "n": 0,
    },
    Object {
      "data": Object {
        "data": Array [
          102,
          103,
          104,
          105,
          106,
        ],
        "type": "Buffer",
      },
      "files_id": "dbId:FsFilesRepository:5",
      "id": "dbId:FsChunksRepository:7",
      "n": 1,
    },
  ],
  "fsFiles": Array [
    Object {
      "chunkSize": 251200,
      "contentType": "binary/octet-stream",
      "filename": "image.jpg",
      "id": "dbId:FsFilesRepository:1",
      "length": 100,
      "uploadDate": "2022-01-01T11:00:00.000Z",
    },
    Object {
      "chunkSize": 251200,
      "contentType": "binary/octet-stream",
      "filename": "image.jpg",
      "id": "dbId:FsFilesRepository:2",
      "length": 100,
      "uploadDate": "2022-01-01T11:00:00.000Z",
    },
    Object {
      "chunkSize": 251200,
      "contentType": "binary/octet-stream",
      "filename": "image.jpg",
      "id": "dbId:FsFilesRepository:3",
      "length": 100,
      "uploadDate": "2022-01-01T11:00:00.000Z",
    },
    Object {
      "chunkSize": 251200,
      "contentType": "binary/octet-stream",
      "filename": "image.jpg",
      "id": "dbId:FsFilesRepository:5",
      "length": 100,
      "uploadDate": "2022-01-01T11:00:00.000Z",
    },
  ],
  "hub": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "httpPort": "80",
      "id": "dbId:HubRepository:1",
      "localIPAddress": "10.0.0.123",
      "name": "myHub",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "location": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:LocationRepository:1",
      "imageId": "dbId:FsFilesRepository:1",
      "name": "sphere1_location",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:LocationRepository:2",
      "imageId": "dbId:FsFilesRepository:2",
      "name": "sphere1_location2",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:LocationRepository:3",
      "name": "sphere1_location3",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "scene": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "data": "test",
      "id": "dbId:SceneRepository:1",
      "name": "sphere1_myScene1",
      "sphereId": "dbId:SphereRepository:1",
      "stockPicture": "Dinner-2",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "data": "test",
      "id": "dbId:SceneRepository:2",
      "name": "sphere1_myScene2",
      "sphereId": "dbId:SphereRepository:1",
      "stockPicture": "barPic",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "customPictureId": "dbId:FsFilesRepository:3",
      "data": "test",
      "id": "dbId:SceneRepository:3",
      "name": "sphere1_myScene3",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "sphere": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:SphereRepository:1",
      "name": "mySphere",
      "uid": 211,
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "uuid": "ibeaconUUID2002",
    },
  ],
  "sphereAccess": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:SphereAccessRepository:1",
      "invitePending": false,
      "role": "admin",
      "sphereAuthorizationToken": "TOKEN:2011xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "userId": "dbId:UserRepository:1",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:SphereAccessRepository:3",
      "invitePending": false,
      "role": "hub",
      "sphereAuthorizationToken": "TOKEN:2013xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "userId": "dbId:HubRepository:1",
    },
  ],
  "sphereKeys": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:SphereKeyRepository:1",
      "key": "key2004",
      "keyType": "ADMIN_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:SphereKeyRepository:2",
      "key": "key2005",
      "keyType": "MEMBER_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:SphereKeyRepository:3",
      "key": "key2006",
      "keyType": "BASIC_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:SphereKeyRepository:4",
      "key": "key2007",
      "keyType": "LOCALIZATION_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:SphereKeyRepository:5",
      "key": "key2008",
      "keyType": "SERVICE_DATA_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:SphereKeyRepository:6",
      "key": "key2009",
      "keyType": "MESH_APPLICATION_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:SphereKeyRepository:7",
      "key": "key2010",
      "keyType": "MESH_NETWORK_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "sphereTrackingNumber": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:SphereTrackingNumberRepository:1",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:SphereTrackingNumberRepository:2",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:SphereTrackingNumberRepository:3",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "stone": Array [
    Object {
      "address": "RAN2014",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneRepository:1",
      "locationId": "dbId:LocationRepository:1",
      "major": 2015,
      "minor": 2016,
      "name": "stone1",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "address": "RAN2021",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneRepository:2",
      "major": 2022,
      "minor": 2023,
      "name": "stone2",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "address": "RAN2028",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneRepository:3",
      "major": 2029,
      "minor": 2030,
      "name": "stone3",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "stoneAbility": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "enabled": false,
      "id": "dbId:StoneAbilityRepository:1",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:1",
      "syncedToCrownstone": false,
      "type": "dimming",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "enabled": false,
      "id": "dbId:StoneAbilityRepository:2",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:2",
      "syncedToCrownstone": false,
      "type": "dimming",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "enabled": false,
      "id": "dbId:StoneAbilityRepository:3",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:3",
      "syncedToCrownstone": false,
      "type": "dimming",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "stoneAbilityProperty": Array [
    Object {
      "abilityId": "dbId:StoneAbilityRepository:1",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneAbilityPropertyRepository:1",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:1",
      "syncedToCrownstone": true,
      "type": "smoothDimming",
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "value": "true",
    },
    Object {
      "abilityId": "dbId:StoneAbilityRepository:2",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneAbilityPropertyRepository:2",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:2",
      "syncedToCrownstone": true,
      "type": "smoothDimming",
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "value": "true",
    },
    Object {
      "abilityId": "dbId:StoneAbilityRepository:3",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneAbilityPropertyRepository:3",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:3",
      "syncedToCrownstone": true,
      "type": "smoothDimming",
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "value": "true",
    },
  ],
  "stoneBehaviour": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "data": true,
      "id": "dbId:StoneBehaviourRepository:1",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:1",
      "syncedToCrownstone": false,
      "type": "twilight",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "data": true,
      "id": "dbId:StoneBehaviourRepository:2",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:2",
      "syncedToCrownstone": false,
      "type": "twilight",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "data": true,
      "id": "dbId:StoneBehaviourRepository:3",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:3",
      "syncedToCrownstone": false,
      "type": "twilight",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "stoneKeys": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneKeyRepository:1",
      "key": "key2017",
      "keyType": "UART_DEVICE_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:1",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneKeyRepository:10",
      "key": "key2032",
      "keyType": "MESH_DEVICE_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:3",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneKeyRepository:11",
      "key": "key2033",
      "keyType": "MESH_DEVICE_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:3",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneKeyRepository:12",
      "key": "key2034",
      "keyType": "UART_DEVICE_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:3",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneKeyRepository:2",
      "key": "key2018",
      "keyType": "MESH_DEVICE_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:1",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneKeyRepository:3",
      "key": "key2019",
      "keyType": "MESH_DEVICE_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:1",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneKeyRepository:4",
      "key": "key2020",
      "keyType": "UART_DEVICE_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:1",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneKeyRepository:5",
      "key": "key2024",
      "keyType": "UART_DEVICE_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:2",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneKeyRepository:6",
      "key": "key2025",
      "keyType": "MESH_DEVICE_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:2",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneKeyRepository:7",
      "key": "key2026",
      "keyType": "MESH_DEVICE_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:2",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneKeyRepository:8",
      "key": "key2027",
      "keyType": "UART_DEVICE_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:2",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneKeyRepository:9",
      "key": "key2031",
      "keyType": "UART_DEVICE_KEY",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:3",
      "ttl": 0,
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "stoneSwitchState": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneSwitchStateRepository:1",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:1",
      "switchState": 1,
      "timestamp": "2022-01-01T11:00:00.000Z",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneSwitchStateRepository:2",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:1",
      "switchState": 1,
      "timestamp": "2022-01-01T11:00:00.000Z",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneSwitchStateRepository:3",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:2",
      "switchState": 1,
      "timestamp": "2022-01-01T11:00:00.000Z",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneSwitchStateRepository:4",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:2",
      "switchState": 1,
      "timestamp": "2022-01-01T11:00:00.000Z",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneSwitchStateRepository:5",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:3",
      "switchState": 1,
      "timestamp": "2022-01-01T11:00:00.000Z",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:StoneSwitchStateRepository:6",
      "sphereId": "dbId:SphereRepository:1",
      "stoneId": "dbId:StoneRepository:3",
      "switchState": 1,
      "timestamp": "2022-01-01T11:00:00.000Z",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "toon": Array [
    Object {
      "changedProgramTime": 0,
      "changedToProgram": "NONE",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:ToonRepository:1",
      "refreshToken": "refreshToken",
      "refreshTokenTTL": 12345,
      "refreshTokenUpdatedAt": 1641034800000,
      "refreshTokenUpdatedFrom": "1641034800000",
      "sphereId": "dbId:SphereRepository:1",
      "toonAddress": "toonAddress",
      "toonAgreementId": "toonAgreementId",
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "updatedScheduleTime": 0,
    },
  ],
}
`;

exports[`Delete member in sphere and run sanitation, check if all proper data is removed and if all shared data is kept. 1`] = `
Object {
  "appInstallation": Array [
    Object {
      "appName": "testApp",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "developmentApp": false,
      "deviceId": "dbId:DeviceRepository:3",
      "deviceType": "phone",
      "id": "dbId:AppInstallationRepository:3",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "crownstoneToken": Array [
    Object {
      "created": "2022-01-01T11:00:00.000Z",
      "expiredAt": "2022-01-15T11:00:00.000Z",
      "id": "TOKEN:2037xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
      "principalType": "user",
      "ttl": 1209600,
      "userId": "dbId:UserRepository:2",
    },
  ],
  "device": Array [
    Object {
      "address": "abc",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:DeviceRepository:3",
      "name": "sphere1_device",
      "ownerId": "dbId:UserRepository:2",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "devicePreferences": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:3",
      "id": "dbId:DevicePreferencesRepository:4",
      "property": "prop",
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "value": true,
    },
  ],
  "fingerprint": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "data": null,
      "id": "dbId:FingerprintRepository:7",
      "isTransformed": false,
      "locationId": "dbId:LocationRepository:1",
      "ownerId": "dbId:UserRepository:2",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "data": null,
      "id": "dbId:FingerprintRepository:9",
      "isTransformed": false,
      "locationId": "dbId:LocationRepository:3",
      "ownerId": "dbId:UserRepository:2",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "fingerprintLinker": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:3",
      "fingerprintId": "dbId:FingerprintRepository:7",
      "id": "dbId:FingerprintLinkerRepository:7",
      "locationId": "dbId:LocationRepository:1",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:3",
      "fingerprintId": "dbId:FingerprintRepository:5",
      "id": "dbId:FingerprintLinkerRepository:8",
      "locationId": "dbId:LocationRepository:2",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "deviceId": "dbId:DeviceRepository:3",
      "fingerprintId": "dbId:FingerprintRepository:9",
      "id": "dbId:FingerprintLinkerRepository:9",
      "locationId": "dbId:LocationRepository:3",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "sphereAccess": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": "dbId:SphereAccessRepository:2",
      "invitePending": false,
      "role": "member",
      "sphereAuthorizationToken": "TOKEN:2012xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
      "sphereId": "dbId:SphereRepository:1",
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "userId": "dbId:UserRepository:2",
    },
  ],
  "user": Array [
    Object {
      "accountCreationPending": false,
      "createdAt": "1970-01-01T00:00:00.000Z",
      "email": "sphere1_member@test.com",
      "emailVerified": false,
      "id": "dbId:UserRepository:2",
      "language": "en_us",
      "new": true,
      "updatedAt": "1970-01-01T00:00:00.000Z",
      "uploadDeviceDetails": true,
      "uploadLocation": true,
      "uploadSwitchState": true,
    },
  ],
}
`;
